# hype

./: .gitignore  .gitmodules  BUILD_OVMF.md  CMakeLists.txt  EFI_MAKE.md  README.md  build_edk.sh  configure.sh  main.cpp  run.sh  startup.nsh
arch/: CMakeLists.txt
arch/include/: macros.h  types.h
arch/include/x86/: cpuid.h  cr.h  error.h  intrinsic.h  memory.h  msr.h  paging.h  regs.h  segment.h
arch/include/x86/paging/: huge_paging.h  paging.h
arch/include/x86/vmx/: environment.h  instrinsic.h  msr.h  operations.h  vmcs.h
arch/src/x86/: cpuid.cpp  cr.cpp  debug.cpp  error.cpp  memory.cpp  msr.cpp  paging.cpp  regs.cpp  segment.cpp
arch/src/x86/intrinsic/: icpuid.asm  igen.asm  imsr.asm  iregs.asm  iseg.asm  ivmx.asm
arch/src/x86/paging/: huge_paging.cpp  paging.cpp
arch/src/x86/vmx/: environment.cpp  intrinsic.cpp  operations.cpp  vmcs.cpp
common/: CMakeLists.txt
common/include/: crt.h  debug.h  environment.h  error.h  macros.h  types.h
common/src/: crt.cpp  debug.cpp  error.cpp
edk/: CMakeLists.txt  header_fix.h  target.txt  target_ovmf.txt
edk/HypePkg/: HypePkg.dec  HypePkg.dsc
edk/HypePkg/Hype/: Hype.inf  dummy.c
environment/: CMakeLists.txt  base.h
environment/efi/: efi_base.h  efi_debug.cpp  efi_environment.cpp  efi_heap.cpp
framework/: CMakeLists.txt  buffer.h  check.h  common.h  concepts.h  crt.cpp  crt.h  debug.h  environment.h  heap.h  optional.h  ptr.h  result.h  status.h  type_traits.h  types.h
hype/: CMakeLists.txt  base.h  context.h  cpu.asm  cpu.cpp  cpu.h  crt.cpp  crt.h  debug.cpp  debug.h  efi_base.h  environment.cpp  environment.h  hype.cpp  hype.h  interrupts.asm  interrupts.cpp  interrupts.h  main.cpp  memory.cpp  memory.h  status.cpp  status.h  vmcs_checks.cpp  vmentry.asm  vmentry.h  vmentry_checks.cpp  vmexit.asm  vmexit.cpp  vmexit.h  vmx.cpp  vmx.h
hype/common/: common.h  crt.cpp  crt.h  debug.cpp  hype_defs.h  hype_types.h  result.cpp  result.h
hype/efi/: commonefi.cpp  commonefi.h  efi_base.h  efi_debug.cpp  efi_environment.cpp  efi_heap.cpp  memory.cpp  memory.h
hype/environment/: allocation.cpp  allocation.h  memory.cpp  memory.h  paging.cpp  paging.h
hype/framework/: buffer.cpp  buffer.h  ptr.h
hype/include/: common.h  commonefi.h  crt.h  debug.h  env.h  environment.h  error.h  hype.h  vcpu.h  vmcs.h
hype/src/: crt.cpp  debug.cpp  efi.cpp  env.cpp  environment.cpp  hype.cpp  main.cpp  vcpu.cpp  vmcs.cpp
hype/src/common/: debug.cpp  environment.cpp
include/: types.h
include/cpu/: id.h  regs.h
include/x64/: gdt.h  id.h  intrinsic.h  regs.h
scrips/: macros.cmake
scrips/toolchains/: mingw-w64-x86_64.cmake
scripts/modules/: FindGNUefi.cmake  FindOVMF.cmake
scripts/toolchains/: mingw-w64-x86_64.cmake
src/cpu/: id.cpp
src/x64/: gdt.cpp  id.cpp  regs.cpp
test/: CMakeLists.txt  main.cpp
test/src/: main.cpp
